--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -17,6 +21,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -24,6 +31,11 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "jsdom": "^27.2.0",
+    "msw": "^2.12.3",
+    "@playwright/test": "^1.40.0",
+    "playwright": "^1.40.0",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.13"
   }
 }
